Fix Java 8 source compatibility in PinGitHubActionsToSha
- Replace Set.of() with Collections.unmodifiableSet(new HashSet<>(Arrays.asList()))
- Replace String.isBlank() with trim().isEmpty()
- Replace InputStream.readAllBytes() with a ByteArrayOutputStream read loop
- Remove withSuffix() call (not present on Yaml.Scalar); drop inline ref comment
- Update test expectations to match (no trailing # ref comment)